# Bootcamp2023-DesarrolloWeb-Django-Postgres

./: README.md  paquetes.txt
0programacion_web/: 0hola_mundo.py  Deber1_MayraPachacama.py  Sprint1_MayraPachacama.py
1programacion_avanzada/: 1funciones.py  1manipulacion_archivos.py  3expresiones_regulares.py  4manipulacion_imagenes.py  Deber3_MayraPachacama.py  Sprint2_MayraPachacama.py  alumnos.txt  convertidor_voz_texto.py
1programacion_avanzada/csv_alumnos/: 2diccionarios.py  alumnos.csv  main.py
2/: Carro.py  Computadora.py  Sprint3_MayraPachacama.py  ejercicio_biblioteca.py  ejercicio_cuentasbancarias.py  ejercicio_estudiantes.py  ejercicio_herencia.py  ejercicio_polimorfismo.py  ejercicio_transporte.py
4Django/django101/: db.sqlite3
4Django/django101/django101/: settings.py  urls.py
4Django/django101/miapp/: admin.py  models.py  urls.py  views.py
4Django/ecommerce/: db.sqlite3  pyproject.toml
4Django/ecommerce/data/: categorias.csv  productos.csv
4Django/sprint5_eventos/: manage.py  pyproject.toml
4Django/sprint5_eventos/data/: categorias.csv  ciudades.csv  eventos.csv
4Django/sprint5_eventos/event/: admin.py  models.py  urls.py  views.py
4Django/sprint5_eventos/event/migrations/: 0001_initial.py  0002_alter_evento_estado.py  0003_alter_evento_estado.py  0004_alter_evento_estado.py
4Django/sprint5_eventos/event/templates/: index.html  login.html
4Django/sprint5_eventos/scripts/: categoria_seeder.py  ciudad_seeder.py  evento_seeder.py
4Django/sprint5_eventos/sprint5_eventos/: asgi.py  settings.py  urls.py  wsgi.py
(+15 files in other folders)
