[tool.poetry]
name = "sprint5-eventos"
version = "0.1.0"
description = "eventos con Django"
authors = ["Mayra025 <maypachacama@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.9"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
django-extensions = "^3.2.3"
django-bootstrap5 = "^23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
